--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@azure/ai-text-analytics": "^6.0.0-beta.1",
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.6.0"
